--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,11 @@ body {
   height: 100vh;
   margin: 0;
 }
+
+button:not(:last-of-type) {
+  margin-right: 5px;
+}
+
+.mt {
+  margin-bottom: 40px;
+}
