--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<ul>
-  <li *ngIf="authService.isLoggedOut$ | async"><a [routerLink]="['/login']">Login</a></li>
-  <li *ngIf="authService.isLoggedIn$ | async"><a [routerLink]="['/profile']">Profile</a></li>
-  <li *ngIf="authService.isLoggedIn$ | async"><button (click)="logout()">logout</button></li>
-  <li><a [routerLink]="['/ro']">Exo RO</a></li>
-</ul>
+<p-menubar>
+  <button pButton label="Login" icon="pi pi-power-on" *ngIf="authService.isLoggedOut$ | async" (click)="redirect('/login')"></button>
+  <button pButton label="Profile" icon="pi pi-fw pi-user" *ngIf="authService.isLoggedIn$ | async" (click)="redirect('/profile')"></button>
+  <button pButton label="Logout" icon="pi pi-power-off" *ngIf="authService.isLoggedIn$ | async" (click)="logout()"></button>
+  <button pButton label="Exo RO" icon="pi pi-fw pi-pencil" (click)="redirect('/ro')"></button>
+</p-menubar>
+
 <p-toast position="top-right" key="main"></p-toast>
 <router-outlet></router-outlet>
 
