--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <p-menubar>
-  <button pButton label="Login" icon="pi pi-id-card" *ngIf="authService.isLoggedOut$ | async" (click)="redirect('/login')"></button>
+  <button pButton label="Games" icon="pi pi-list" (click)="redirect('/games')"></button>
+  <button pButton label="Login" icon="pi pi-sign-in" *ngIf="authService.isLoggedOut$ | async" (click)="redirect('/login')"></button>
   <button pButton label="Profile" icon="pi pi-fw pi-user" *ngIf="authService.isLoggedIn$ | async" (click)="redirect('/profile')"></button>
-  <button pButton label="Logout" icon="pi pi-power-off" *ngIf="authService.isLoggedIn$ | async" (click)="logout()"></button>
+  <button pButton label="Logout" icon="pi pi-sign-out" *ngIf="authService.isLoggedIn$ | async" (click)="logout()"></button>
   <button pButton label="Exo RO" icon="pi pi-fw pi-pencil" (click)="redirect('/ro')"></button>
 </p-menubar>
 
