--- a/src/app/form-register/form-register.component.html
+++ b/src/app/form-register/form-register.component.html
@@ -10,6 +10,7 @@
       </div>
     </div>
   </div>
+
   <div class="p-field p-grid">
     <label for="prenom" class="p-col-fixed" style="width:100px">Prénom</label>
     <div class="p-col">
@@ -21,6 +22,7 @@
       </div>
     </div>
   </div>
+
   <div class="p-field p-grid">
     <label for="pseudo" class="p-col-fixed" style="width:100px">Pseudo</label>
     <div class="p-col">
@@ -32,6 +34,7 @@
       </div>
     </div>
   </div>
+
   <div class="p-field p-grid">
     <label for="mail" class="p-col-fixed" style="width:100px">Adresse Mail</label>
     <div class="p-col">
@@ -42,37 +45,27 @@
       </div>
     </div>
   </div>
+
   <div class="p-field p-grid">
     <label for="mdp1" class="p-col-fixed" style="width:100px">Mot de passe</label>
     <div class="p-col">
-      <input id="mdp1" type="text" pInputText formControlName="mdp1">
-      <div *ngIf="mdp1.invalid && (mdp1.dirty || mdp1.touched)" class="ng-dirty ng-invalid">
-        <div *ngIf="mdp1?.errors.required">L'adresse mdp1 est obligatoire</div>
-        <div *ngIf="mdp1?.errors.pattern">Le mot de passe doit contenir au moins : 1 majuscule, 1 chiffre et 8 caractères</div>
-      </div>
+      <input id="mdp1" type="password" pInputText formControlName="mdp1">
+        <div *ngIf="mdp1.invalid && (mdp1.dirty || mdp1.touched)" class="ng-dirty ng-invalid">
+          <div *ngIf="mdp1?.errors.required">Le mot de passe est obligatoire</div>
+          <div *ngIf="mdp1?.errors.pattern">Le mot de passe doit contenir au moins : 1 majuscule, 1 chiffre et 8 caractères</div>
+        </div>
     </div>
   </div>
+
   <div class="p-field p-grid">
     <label for="mdp2" class="p-col-fixed" style="width:100px">Confirmez votre mot de passe</label>
     <div class="p-col">
-      <input id="mdp2" type="text" pInputText formControlName="mdp2">
+      <input id="mdp2" type="password" pInputText formControlName="mdp2">
       <div *ngIf="mdp2.invalid && (mdp2.dirty || mdp2.touched)" class="ng-dirty ng-invalid">
-        <div *ngIf="mdp2?.errors.required">L'adresse mdp2 est obligatoire</div>
+        <div *ngIf="mdp2?.errors.required">La confirmation du mot de passe est obligatoire</div>
       </div>
       <div *ngIf="!checkPasswords()">Les deux mots de passe doivent être les mêmes</div>
     </div>
   </div>
 </form>
 <button [disabled]="!formulaire.valid" (click)="onSubmit()">Valide</button>
-
-<div>
-  valeur saisie : {{formulaire.value | json}}
-</div>
-<div>
-  Formulaire valide : {{formulaire.valid}}
-</div>
-
-
-
-
-
