--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,7 @@
 <h3>Profile d'un utilisateur</h3>
 <br>
 <div *ngIf="!loading">
+  <button pButton label="My games" icon="pi pi-fw pi-pencil" (click)="redirect('/profile/games', user.id)"></button>
   <h2>#{{user.id}} {{user.prenom}} {{user.nom}}</h2>
   <p>{{user.email}}</p>
 
