Mechanics added in the details of the game

--- a/src/app/game-detail/game-detail.component.html
+++ b/src/app/game-detail/game-detail.component.html
@@ -13,6 +13,12 @@
       {{game.regles}}
     </p>
     <ng-template pTemplate="body">
+      Mécaniques :
+      <ul>
+        <li *ngFor="let meca of game.mecaniques">
+          {{meca.nom}}
+        </li>
+      </ul>
       <p>
         Catégorie : {{game.categorie}}
         <br>
