--- a/src/app/lp-solver-test/lp-solver-test.component.html
+++ b/src/app/lp-solver-test/lp-solver-test.component.html
@@ -28,6 +28,7 @@ qu'elle peut vendre toute sa production) ?
 </markdown>
 
   <button (click)="resolutionProbleme()">Résoudre le problème !</button>
+<button (click)="resolutionSacADos()">Résoudre le sac à dos !</button>
 
 <markdown ngPreserveWhitespaces>
   ## Modélisation du problème des sachets de papillotes
@@ -184,3 +185,5 @@ qu'elle peut vendre toute sa production) ?
   ```
 
 </markdown>
+
+
