--- a/src/app/game-detail/game-detail.component.html
+++ b/src/app/game-detail/game-detail.component.html
@@ -35,9 +35,24 @@
         <br>
         Édité par {{game.editeur_id.nom}}
       </p>
+      <p>
+        Commentaires :
+      </p>
+      <ul>
+        <li *ngFor="let comment of game.commentaires">
+          {{ comment.commentaire }}
+          <br/>
+          Note : {{comment.note}}/5
+          <br/>
+          Créé il y a {{timeFrom(comment.date_com)}} par {{comment.user.nom}}
+          <br/>
+        </li>
+      </ul>
+      <app-comment *ngIf="!!game" [id]="game.id"></app-comment>
     </ng-template>
     <ng-template pTemplate="footer">
-      <button pButton type="button" class="p-button-raised" label="Retour à la liste des jeux" icon="pi pi-undo" [routerLink]="['/games']"></button>
+      <button pButton type="button" class="p-button-raised" label="Retour à la liste des jeux" icon="pi pi-undo"
+              [routerLink]="['/games']"></button>
     </ng-template>
   </p-card>
 </div>
