Games can now be suppressed from your collection

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<h3>Profile d'un utilisateur</h3>
+<h3>Profil d'un utilisateur</h3>
 <br>
 <div *ngIf="!loading">
   <button pButton label="My games" icon="pi pi-fw pi-pencil" (click)="redirect('/profile/games', user.id)"></button>
