--- a/src/app/user-games/user-games.component.html
+++ b/src/app/user-games/user-games.component.html
@@ -13,6 +13,6 @@
     </p>
   </ng-template>
   <ng-template pTemplate="footer">
-    <button pButton type="button" class="p-button-raised p-button-danger" label="Supprimer" icon="pi pi-trash" (click)="suppGame(g.jeu.id)"></button>
+    <button pButton type="button" class="p-button-raised p-button-danger" label="Supprimer" icon="pi pi-trash" (click)="suppGame(g.jeu.id, g.lieu, g.prix, g.date_achat)"></button>
   </ng-template>
 </p-card>
