--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,8 @@
-<h3>Profile d'un utilisateur</h3>
+<h3>Profil d'un utilisateur</h3>
 <br>
 <div *ngIf="!loading">
   <button pButton label="My games" icon="pi pi-fw pi-pencil" (click)="redirect('/profile/games', user.id)"></button>
+  <button pButton label="Send games" icon="pi pi-fw pi-pencil" (click)="redirect('/profile/send', user.id)"></button>
   <h2>#{{user.id}} {{user.prenom}} {{user.nom}}</h2>
   <p>{{user.email}}</p>
 
@@ -9,7 +10,7 @@
   <p>Modifié : {{user.updated_at | amDateFormat:'LL'}} </p>
 
   <p-button (click)="showModalDialog()" icon="pi pi-external-link" label="Ajouter un jeu"></p-button>
-  <p-dialog header="Header" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
+  <p-dialog header="Ajoutez un jeu à votre collection" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
             [draggable]="false" [resizable]="false">
     <form [formGroup]="formulaire" (ngSubmit)="onSubmit()">
       <div style="display: inline; margin-right: 10px; ">Choisissez un jeu</div>
