--- a/src/app/games-list/games-list.component.html
+++ b/src/app/games-list/games-list.component.html
@@ -6,7 +6,7 @@
   <button pButton type="button" class="p-button-raised" label="Trier les jeux par nom" icon="pi pi-sort-alpha-down" (click)="sortNames()"></button>
   <br>
   <br>
-  <button pButton type="button" class="p-button-raised" label="Trier les jeux par note" icon="pi pi-sort-alpha-down" (click)="sortNotes()"></button>
+  <button pButton type="button" class="p-button-raised" label="Trier les jeux par note" icon="pi pi-sort-numeric-down" (click)="sortNotes()"></button>
   <br>
   <br>
   <form (submit)="filterPlayerNb(nbJ)">
